# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AdapterPattern/: AdapterPattern.h
AgencyPattern/: AgencyPattern.h
AppearanceMode/: AppearanceMode.h
BridgePattern/: BridgePattern.h
BuilderPattern/: BuilderPattern.h
ChainPattern/: ChainPattern.h
CommandPattern/: CommandPattern.h
CompositePattern/: CompositePattern.h
DecoratorPattern/: Decorator.h
FactoryMethodPattern/: FactoryMethodPattern.h
FlyWeightPattern/: FlyWeightPattern.h
InterpreterPattern/: InpterpreterPattern.h
IteratorPatterns/: IteratorPatterns.h
MementoPattern/: MementoPattern.h
ObserverPattern/: ObserverPattern.h
PrototypePattern/: PrototypeBase.h
ProxyPattern/: Proxy.h
SimpleFactory/: FactoryInstance.h  InstanceA.cpp  InstanceA.h  InstanceB.cpp  InstanceB.h  Main.cpp  SimpleFactoryBase.cpp  SimpleFactoryBase.h  SimpleFactoryContext.cpp  SimpleFactoryContext.h
SingletonPattern/: SingletonPattern.h
StatusPattern/: StatusPattern.cpp  StatusPattern.h
StrategyPattern/: StrategyBase.h  StrategyContext.cpp  StrategyContext.h
TemplatePattern/: TemplatePattern.h
Test/: AdapterPatternTest.cpp  AgencyPatternTest.cpp  BridgePatternTest.cpp  ChainPatternTest.cpp  CommandPatternTest.cpp  CompositePattern.cpp  DecoratorPatternTest.cpp  FactoryMethodPatternTest.cpp  FlyWeightPatternTest.cpp  InterpreterPatternTest.cpp  IteratorPatternsTest.cpp  MementoPatternTest.cpp  ObserverPatternTest.cpp  ProxyPatternTest.cpp  SimpleFactoryTest.cpp  SingletonPatternTest.cpp  StatusPatternTest.cpp  StrategyPatternTest.cpp  TemplatePatternTest.cpp  VisitorPatternTest.cpp
VisitorPattern/: VisitorPattern.h
