cmake_minimum_required(VERSION 3.8)
project(DesignPatterns)

set(CMAKE_CXX_STANDARD 11)

set(APPEARANCE_SOURCE_FILE AppearanceMode/AppearanceMode.h)
set(BUILDER_SOURCE_FILE BuilderPattern/BuilderPattern.h)
set(DECORATOR_SOURCE_FILE DecoratorPattern/Decorator.h)
set(FACTORYMETHOD_SOURCE_FILE FactoryMethodPattern/FactoryMethodPattern.h)
set(PROTOTYPE_SOURCE_FILE PrototypePattern/PrototypeBase.h)
set(APPEARANCE_SOURCE_FILE AppearanceMode/AppearanceMode.h Test/AppearanceModeTest.cpp ObserverPattern/ObserverPattern.h)
set(PROXY_SOURCE_FILE ProxyPattern/Proxy.h)
set(SIMPLEFACTORY_SOURCE_FILE SimpleFactory/FactoryInstance.h SimpleFactory/InstanceA.cpp SimpleFactory/InstanceA.h
        SimpleFactory/InstanceB.cpp SimpleFactory/InstanceB.h SimpleFactory/SimpleFactoryBase.cpp SimpleFactory/SimpleFactoryBase.h
        SimpleFactory/SimpleFactoryContext.cpp SimpleFactory/SimpleFactoryContext.h)
set(STRATEGY_SOURCE_FILE StrategyPattern/StrategyContext.cpp StrategyPattern/StrategyContext.h)
set(TEMPLATE_SOURCE_FILE TemplatePattern/TemplatePattern.h)
set(OBSERVER_SOURCE_FILE ObserverPattern/ObserverPattern.h)
set(STATUS_SOURCE_FILE StatusPattern/StatusPattern.h StatusPattern/StatusPattern.cpp)
set(ADAPTER_SOURCE_FILE AdapterPattern/AdapterPattern.h )
set(MEMENTO_SOURCE_FILE MementoPattern/MementoPattern.h)
set(COMPOSITE_SOURCE_FILE CompositePattern/CompositePattern.h)
set(ITERATOR_SOURCE_FILE IteratorPatterns/IteratorPatterns.h)
set(SINGLETON_SOURCE_FILE SingletonPattern/SingletonPattern.h)
set(BRIDGE_SOURCE_FILE BridgePattern/BridgePattern.h)
set(COMMAND_SOURCE_FILE CommandPattern/CommandPattern.h)
set(CHAIN_SOURCE_FILE ChainPattern/ChainPattern.h)
set(AGENCY_SOURCE_FILE AgencyPattern/AgencyPattern.h)
set(FLYWEIGHT_SOURCE_FILE FlyWeightPattern/FlyWeightPattern.h)
set(INTERPRETER_SOURCE_FILE InterpreterPattern/InpterpreterPattern.h)
set(VISITOR_SOURCE_FILE  VisitorPattern/VisitorPattern.h)



add_executable(AppearanceMode ${APPEARANCE_SOURCE_FILE} Test/AppearanceModeTest.cpp)
add_executable(BuilderPattern ${BUILDER_SOURCE_FILE} Test/BuilderPatternTest.cpp.cpp)
add_executable(DecoratorPattern ${DECORATOR_SOURCE_FILE} Test/DecoratorPatternTest.cpp)
add_executable(FactoryMethodPattern ${FACTORYMETHOD_SOURCE_FILE} Test/FactoryMethodPatternTest.cpp)
add_executable(PrototypePattern ${PROTOTYPE_SOURCE_FILE} Test/PrototypePatternTest.cpp)
add_executable(ProxyPattern ${PROXY_SOURCE_FILE} Test/ProxyPatternTest.cpp)
add_executable(SimpleFactory ${SIMPLEFACTORY_SOURCE_FILE} Test/SimpleFactoryTest.cpp)
add_executable(StrategyPattern ${STRATEGY_SOURCE_FILE} Test/StrategyPatternTest.cpp)
add_executable(TemplatePattern ${TEMPLATE_SOURCE_FILE} Test/TemplatePatternTest.cpp)
add_executable(ObserverPattern ${OBSERVER_SOURCE_FILE} Test/ObserverPatternTest.cpp)
add_executable(StatusPattern ${STATUS_SOURCE_FILE} Test/StatusPatternTest.cpp)
add_executable(AdapterPattern ${ADAPTER_SOURCE_FILE} Test/AdapterPatternTest.cpp)
add_executable(MementoPattern ${MEMENTO_SOURCE_FILE} Test/MementoPatternTest.cpp)
add_executable(CompositePattern ${COMPOSITE_SOURCE_FILE} Test/CompositePattern.cpp)
add_executable(IteratorPatterns ${ITERATOR_SOURCE_FILE} Test/IteratorPatternsTest.cpp)
add_executable(SingletonPattern ${SINGLETON_SOURCE_FILE} Test/SingletonPatternTest.cpp)
add_executable(BridgePattern ${BRIDGE_SOURCE_FILE} Test/BridgePatternTest.cpp)
add_executable(CommandPattern ${COMMAND_SOURCE_FILE} Test/CommandPatternTest.cpp)
add_executable(ChainPattern ${CHAIN_SOURCE_FILE} Test/ChainPatternTest.cpp)
add_executable(AgencyPattern ${AGENCY_SOURCE_FILE} Test/AgencyPatternTest.cpp)
add_executable(FlyWeightPattern ${FLYWEIGHT_SOURCE_FILE} Test/FlyWeightPatternTest.cpp)
add_executable(InterpreterPattern ${INTERPRETER_SOURCE_FILE} Test/InterpreterPatternTest.cpp)
add_executable(VisitorPattern ${VISITOR_SOURCE_FILE} Test/VisitorPatternTest.cpp)
